src/pages/Journey/Consultation/mobile/index.styl
+iphone()
  .consult-page
    overflow auto
    scroll-snap-type y mandatory
    display flex
    flex-direction column
    height 100%

    .header
      position sticky

    .consult-bg
      width 100vw
      display flex
      flex-direction column
      flex 1 0 auto
      position relative
      top 134vh
      height 86vh
      margin-top -86vh
      padding-left 10%
      z-index 0

      .consult-illustration
        margin 0
        flex 1 0 auto
        width 100vw
        height 30vh

      .mail-box
        margin 20vh 0 0 52vw
        flex 1 0 auto
        width 56vw
        height 20vh
        z-index 123

    .consult-content
      scroll-snap-align start
      flex-shrink 0
      width 100%
      height 100vh
      margin-top 5.9%
      overflow hidden

      .consult-heading
        width 100%
        font-size 6.93vw
        line-height 30pt
        margin 0
        padding 0 8% 0 10%
        margin-bottom 1.8vh

      .consult-para
        display none

      .consult-text-mobile
        display block

        .consult-para
          display block
          width 100%
          padding 0 8% 0 10%
          font-size 4vw
          color #4A4A4A

          &:first-child
            font-weight 600

          &:last-child
            font-weight 600

    .mail-section
      height 100vh
      margin 0
      flex-shrink 0
      width 100%
      padding 8.7vh 8% 0 10%

      .mail-heading
        width 100%
        line-height 24pt
        margin 0
        font-size 5.33vw
        padding-right 30%

      .mail-form
        width 100%
        margin-top 4vh

        .input, .text-area
          margin 9px 0 18px 0

        .text-area
          height 100px

        .button
          padding 10px 48px
          line-height 23pt
          flex 1 0 auto
          border-radius 100px
          font-size 18px
          letter-spacing 1.8px
          align-self center
          margin 24px 0 52px 0

